objects/Lesson_Learned__c.object
<CustomObject>
    <fields>
        <fullName>Cap_Name__c</fullName>
        <label>Cap Name</label>
        <referenceTo>Cap__c</referenceTo>
        <relationshipLabel>Lessons Learned</relationshipLabel>
        <relationshipName>Lessons_Learned</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Scoping and Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution and Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation and Closure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Success__c</fullName>
        <label>Problem/Success</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lesson Learned</label>
    <nameField>
        <displayFormat>LL-{0000}</displayFormat>
        <label>Lesson Learned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lessons Learned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>